--- a/geral.css
+++ b/geral.css
@@ -3,7 +3,7 @@ body{
 }
 h1{
     text-align: center;
-    font-size: medium;
+    font-size: larger;
 }
 .rodape{
     position: absolute;
@@ -19,5 +19,6 @@ h1{
     width: 100%;
     height: 45px;
     top: 0;
-    inline-size: auto;
+    flex-direction: column-reverse;
+
 }
