--- a/geral.css
+++ b/geral.css
@@ -19,6 +19,10 @@ h1{
     width: 100%;
     height: 45px;
     top: 0;
-    flex-direction: column-reverse;
 
+
+}
+div{
+    display: flex;
+    flex-direction: row-reverse;
 }
