--- a/geral.css
+++ b/geral.css
@@ -19,10 +19,16 @@ h1{
     width: 100%;
     height: 45px;
     top: 0;
+    display: flex;
+    flex-direction: row-reverse;
 
 
 }
 div{
+    display: flex;
+    flex-direction: row-reverse;
+}
+nav ul{
     display: flex;
     flex-direction: row-reverse;
 }
