--- a/geral.css
+++ b/geral.css
@@ -20,7 +20,10 @@ h1{
     height: 45px;
     top: 0;
     display: flex;
-    flex-direction: row;
+   
+}
 
+div ul{
+    flex-direction: row;
 
 }
