--- a/geral.css
+++ b/geral.css
@@ -20,10 +20,7 @@ h1{
     height: 45px;
     top: 0;
     display: flex;
-   
-}
-
-div ul{
-    flex-direction: row;
+    flex-direction: row-reverse;
 
 }
+
