--- a/geral.css
+++ b/geral.css
@@ -20,8 +20,6 @@ h1{
     height: 45px;
     top: 0;
     display: flex;
-    flex-direction: row-reverse;
-    justify-content: center;
-
+    flex-direction: row;
 }
 
