--- a/geral.css
+++ b/geral.css
@@ -14,12 +14,15 @@ h1{
     display: flex;
 }
 .menuPrincipal{
-    position: absolute; 
-    background: rgb(204, 91, 219);
+    position: absolute;
+    background: rgb(0, 0, 0);
     width: 100%;
     height: 45px;
     top: 0;
+    left: 0;
+    color: rgb(255, 255, 255);
     display: flex;
-    flex-direction: row;
+    justify-content: start;
+    text-transform: uppercase;
 }
 
