--- a/geral.css
+++ b/geral.css
@@ -34,12 +34,17 @@ h1{
     position: absolute;
     top: 45px;
 }
-nav ul{
+li a {
     display: block;
-  color: #ffffff;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-family: 'Courier New', Courier, monospace;
-}
+    color: #ffffff;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-family: 'Courier New', Courier, monospace;
+  }
+  li a:hover {
+    background: #ffffff;
+    color: black;
+  }
+  
 
