--- a/geral.css
+++ b/geral.css
@@ -34,17 +34,10 @@ h1{
     position: absolute;
     top: 45px;
 }
-li a {
-    display: block;
-    color: #ffffff;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-family: 'Courier New', Courier, monospace;
-  }
-  li a:hover {
-    background: #ffffff;
-    color: black;
-  }
-  
+nav ul{
+    list-style-type: none;
+   margin: 0;
+   padding: 0;
+   overflow: 0;
+}
 
