--- a/geral.css
+++ b/geral.css
@@ -22,9 +22,9 @@ h1{
     position: absolute;
     background: rgb(0, 0, 0);
     width: 100%;
-    height: 45%;
-    top: 25px;
-    left: 11px;
+    height: 45px;
+    top: 0;
+    left: 0;
     color: rgb(255, 255, 255);
     display: flex;
     justify-content: start;
