--- a/geral.css
+++ b/geral.css
@@ -35,9 +35,11 @@ h1{
     top: 45px;
 }
 nav ul{
-   list-style-type: none;
-   margin: 0;
-   padding: 0;
-   overflow: 0;
+    display: block;
+  color: #ffffff;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-family: 'Courier New', Courier, monospace;
 }
 
