--- a/geral.css
+++ b/geral.css
@@ -20,7 +20,7 @@ h1{
 }
 .menuPrincipal{
     position: absolute;
-    background: rgb(0, 0, 0);
+    background: rgb(171, 85, 241);
     width: 100%;
     height: 35px;
     top: 0;
@@ -28,9 +28,9 @@ h1{
     color: rgb(255, 255, 255);
     display: flex;
     justify-content: start;
-    text-transform: uppercase;
 }
 .conteudo {
     position: absolute;
     top: 45px;
+    font-size: 150%;
 }
