--- a/geral.css
+++ b/geral.css
@@ -4,6 +4,7 @@ body{
 h1{
     text-align: center;
     font-size: larger;
+    font-family: 'Courier New', Courier, monospace;
 }
 .rodape{
     position: absolute;
@@ -20,7 +21,7 @@ h1{
 }
 .menuPrincipal{
     position: absolute;
-    background: rgb(65, 36, 88);
+    background: rgb(165, 118, 204);
     width: 100%;
     height: 35px;
     top: 0;
@@ -28,10 +29,13 @@ h1{
     color: rgb(255, 255, 255);
     display: flex;
     justify-content: start;
+    font-size: small;
+    font-family: 'Times New Roman', Times, serif;
 }
-.conteudo {
-    position: absolute;
-    top: 45px;
-    font-size: 150%;
+h2{
+    text-align: start;
+    font-size: medium;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+
 }
 
