--- a/geral.css
+++ b/geral.css
@@ -32,6 +32,13 @@ h1{
     font-size: small;
     font-family: 'Times New Roman', Times, serif;
 }
+
+.conteudo {
+    position: absolute;
+    top: 45px;
+    font-size: 150%;
+}
+
 h2{
     text-align: start;
     font-size: medium;
