--- a/geral.css
+++ b/geral.css
@@ -10,7 +10,7 @@ h1{
    bottom: 0;
    width: 100%;
    height: 50px;
-   background: black;
+   background: rgb(70, 67, 67);
    color: blanchedalmond;
    display: flex;
    justify-content: center;
