--- a/geral.css
+++ b/geral.css
@@ -28,7 +28,7 @@ h1{
     color: rgb(255, 255, 255);
     display: flex;
     justify-content: start;
-    font-size: small;
+    font-size: large;
     font-family: 'Times New Roman', Times, serif;
 }
 
