--- a/geral.css
+++ b/geral.css
@@ -6,12 +6,12 @@ h1{
     font-size: larger;
 }
 .rodape{
-    position: absolute;
+   position: absolute;
    bottom: 0;
    width: 100%;
    height: 50px;
    background: rgb(95, 93, 93);
-   color: blanchedalmond;
+   color: rgb(255, 250, 243);
    display: flex;
    justify-content: center;
    font-size: 20px;
