--- a/geral.css
+++ b/geral.css
@@ -40,8 +40,7 @@ h1{
 
 h2{
     text-align: start;
-    font-size: medium;
     font-family: Georgia, 'Times New Roman', Times, serif;
-
+    font-size: larger;
 }
 
