--- a/geral.css
+++ b/geral.css
@@ -41,6 +41,6 @@ h1{
 h2{
     text-align: start;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: larger;
+    font-size: large;
 }
 
